# Hydra

./: CMakeLists.txt  README.md  demo
data/: StandardShader.fs
engine/: CMakeLists.txt
engine/include/: CallbackLogicComponent.hpp  CameraComponent.hpp  ColliderComponent.hpp  Component.hpp  Entity.hpp  InputSystem.hpp  LightComponent.hpp  LogicComponent.hpp  LogicSystem.hpp  Material.hpp  MeshRenderComponent.hpp  PhysicsSystem.hpp  RenderSystem.hpp  Shader.hpp  Texture.hpp
engine/src/: CameraComponent.cpp  ColliderComponent.cpp  Entity.cpp  InputSystem.cpp  LightComponent.cpp  LogicComponent.cpp  LogicSystem.cpp  Material.cpp  MeshRenderComponent.cpp  PhysicsSystem.cpp  RenderSystem.cpp  Shader.cpp  Texture.cpp
include/Hydra/RenderSystem/: OpenGLRenderSystem.hpp  RenderSystem.hpp
src/: OpenGLRenderSystem.cpp  RenderSystem.cpp  main.cpp
tools/: NewClass.sh
